feat(docs): adicionar detalhamento tecnico da Parte 6 do projeto